--- a/financial_planning_tools.ipynb
+++ b/financial_planning_tools.ipynb
@@ -3076,39 +3076,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This portfolio is expected to be worth between $308,040  and $5,268,713 with a mean value of  $1,588,442 within a 95% confidence interval in thirty years from today. This portfolio is expected to be worth between $ 84,598 and $706,906 with a mean value of  $274,814 within a 95% confidence interval in ten years. This member may be ok in Southeast Asia or parts of South America with 10 years of retirement savings but will run out of money in most of North America. Nobody should run out of money in old age therefore s/he should keep working. What's s/he gonna do retiring at such a young age anyways?"
+    "\"This portfolio is expected to be worth between $308,040  and $5,268,713 with a mean value of  $1,588,442 within a 95% confidence interval in thirty years from today. This portfolio is expected to be worth between $ 84,598 and $706,906 with a mean value of  $274,814 within a 95% confidence interval in ten years. This member may be ok in Southeast Asia or parts of South America with 10 years of retirement savings but will run out of money in most of North America. Nobody should run out of money in old age therefore s/he should keep working. What's s/he gonna do retiring at such a young age anyways?\""
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
